fix: resolve text overflow issue

--- a/style.css
+++ b/style.css
@@ -72,12 +72,13 @@ h1 {
     font-weight: bold;
     cursor: pointer;
     border-radius: 5px;
-    height: 45px;
+    height: 50px;
     padding: 0 15px;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: background-color 0.3s ease;
+    margin: auto 0;
 }
 
 .js-delete-button {
@@ -104,12 +105,14 @@ h1 {
     align-items: center;
     flex-direction: column;
     border: 1px solid #ccc;
-    height: 45px;
-    padding: 0 15px;
+    min-height: 50px;
+    padding: 5px 15px;
     border-radius: 5px;
     text-align: center;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    margin: auto 0;
 }
 
 /* Icons */
